[gd_scene load_steps=10 format=3 uid="uid://dvwcvy43gysxe"]

[ext_resource type="Material" uid="uid://3an27fyeknrg" path="res://Turret/turretBaseMat.tres" id="1_5kpma"]
[ext_resource type="Script" uid="uid://dj4i6riqgnqlk" path="res://Turret/turret.gd" id="1_djkev"]

[sub_resource type="CylinderMesh" id="CylinderMesh_cb20n"]
material = ExtResource("1_5kpma")
height = 1.0

[sub_resource type="CylinderMesh" id="CylinderMesh_5kpma"]
top_radius = 0.6
bottom_radius = 0.6
height = 0.6

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_djkev"]
albedo_color = Color(0.0846899, 0.0846899, 0.0846899, 1)
metallic = 1.0

[sub_resource type="CylinderMesh" id="CylinderMesh_djkev"]
material = SubResource("StandardMaterial3D_djkev")
top_radius = 0.08
bottom_radius = 0.08
height = 0.5

[sub_resource type="Animation" id="Animation_djkev"]
resource_name = "Fire"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TurretBase/TurretTop:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.3, -0.1), Vector3(0, 0.3, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TurretBase/TurretTop/Barrel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.017, 0.35), Vector3(0, 0.017, 0.69)]
}

[sub_resource type="Animation" id="Animation_ttsi1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TurretBase/TurretTop:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.3, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TurretBase/TurretTop/Barrel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.017032, 0.690308)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r754r"]
_data = {
&"Fire": SubResource("Animation_djkev"),
&"RESET": SubResource("Animation_ttsi1")
}

[node name="Turret" type="Node3D"]
script = ExtResource("1_djkev")

[node name="TurretBase" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("CylinderMesh_cb20n")

[node name="TurretTop" type="MeshInstance3D" parent="TurretBase"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
material_override = ExtResource("1_5kpma")
mesh = SubResource("CylinderMesh_5kpma")

[node name="Barrel" type="MeshInstance3D" parent="TurretBase/TurretTop"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.017032, 0.690308)
mesh = SubResource("CylinderMesh_djkev")

[node name="BulletTimer" type="Timer" parent="."]
autostart = true

[node name="FirePosition" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0.95)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_r754r")
}

[connection signal="timeout" from="BulletTimer" to="." method="_on_timer_timeout"]
